<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1.2"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/action_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:text="@string/start"
                    />

                <com.suke.widget.SwitchButton
                    android:id="@+id/switch_button"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    app:sb_show_indicator="false" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_color"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                />
            <RadioGroup
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:id="@+id/radio_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_red"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/radio_green"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/radio_blue"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blue"
                    android:textSize="18sp"/>

            </RadioGroup>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <WebView
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>